--- a/bgpsec/pom.xml
+++ b/bgpsec/pom.xml
@@ -76,17 +76,24 @@
 		</pluginManagement>
 	</build>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.apache.mina/mina-parent -->
+		<dependency>
+			<groupId>org.apache.mina</groupId>
+			<artifactId>mina-parent</artifactId>
+			<version>2.0.7</version>
+			<type>pom</type>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.mina/mina-statemachine -->
 		<dependency>
 			<groupId>org.apache.mina</groupId>
 			<artifactId>mina-statemachine</artifactId>
-			<version>2.0.16</version>
+			<version>2.0.7</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.mina/mina-core -->
 		<dependency>
 			<groupId>org.apache.mina</groupId>
 			<artifactId>mina-core</artifactId>
-			<version>2.0.16</version>
+			<version>2.0.7</version>
 		</dependency>
 	</dependencies>
 </project>
