--- a/bgpsec/pom.xml
+++ b/bgpsec/pom.xml
@@ -39,6 +39,15 @@
 						</manifest>
 					</archive>
 				</configuration>
+				<executions>
+				    <execution>
+				        <id>make-assembly</id>
+				        <phase>package</phase>
+				        <goals>
+				            <goal>single</goal>
+				        </goals>
+				    </execution>
+				</executions>
 			</plugin>
 		</plugins>
 		<pluginManagement>
