--- a/bgpsec/pom.xml
+++ b/bgpsec/pom.xml
@@ -62,7 +62,7 @@
                     </sources>
                     <!-- trigger javah execution -->         
                     <javahClassNames>
-                        <javahClassName>RoutingConfigurer</javahClassName>              
+                        <javahClassName>ar.strellis.com.bgpsec.routingconfig.RoutingConfigurer</javahClassName>              
                     </javahClassNames>
                     <!-- enable additional javah interface in dependencies list -->
                     <javahSearchJNIFromDependencies>true</javahSearchJNIFromDependencies>
@@ -183,4 +183,23 @@
             </exclusions>
         </dependency>
 	</dependencies>
+	<repositories>
+        <repository>
+            <id>repository.jboss.org-public</id>
+            <name>JBoss repository</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public</url>
+        </repository>
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>maven2-central</id>
+            <name>Central Maven repo</name>
+            <url>http://central.maven.org/maven2/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
 </project>
