Modified configure.ac and Makefile.am to add checks for JAVA_HOME
Committer: agustin <agustin@flower>

--- a/bgpsec/src/main/native/Makefile.am
+++ b/bgpsec/src/main/native/Makefile.am
@@ -1,10 +1,5 @@
-AUTOMAKE_OPTIONS=foreign
-CC=gcc
-CFLAGS=-Wall -O3
-
 AM_CPPFLAGS=-I/usr/include -I/usr/include/linux -I$(JAVA_HOME)/include
-LDFLAGS=-shared -fPIC
 
-bin_PROGRAMS=routing_configurer.so
-routing_configurer_so_SOURCES=routing_configurer.c
-
+lib_LTLIBRARIES=librouting_configurer.la
+librouting_configurer_la_SOURCES=routing_configurer.c
+librouting_configurer_la_LDFLAGS=-shared
