Added the functions to actually add a route, fixed Makefile.am and configure.ac to find the JAVA_HOME variable

--- a/bgpsec/src/main/native/Makefile.am
+++ b/bgpsec/src/main/native/Makefile.am
@@ -1,3 +1,4 @@
+AM_CFLAGS=@JNI_CPPFLAGS@ -g -Wall -O2 -fPIC -I$(JAVA_HOME)/include
 lib_LTLIBRARIES=librouting_configurer.la
 librouting_configurer_la_SOURCES=routing_configurer.c
 librouting_configurer_la_LDFLAGS=-shared
