--- a/bgpsec/pom.xml
+++ b/bgpsec/pom.xml
@@ -49,6 +49,23 @@
 				    </execution>
 				</executions>
 			</plugin>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.19.1</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.0.2</version>
+        </dependency>
+    </dependencies>
+</plugin>
             <plugin>
                 <groupId>com.alexkasko.maven</groupId>
                 <artifactId>jni-headers-maven-plugin</artifactId>
@@ -154,11 +171,6 @@
 		</pluginManagement>
 	</build>
 	<dependencies>
-	   <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>16.0.1</version>
-        </dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.mina/mina-parent -->
 		<dependency>
 			<groupId>org.apache.mina</groupId>
