libmnl, the revenge
Added a factory method for creating a routing configurer that would use
the libmnl library. Fixed Makefile.am to include code to link mnl into
the final library. Added a test class to test the infrastructure.

--- a/bgpsec/src/main/native/configure.ac
+++ b/bgpsec/src/main/native/configure.ac
@@ -28,4 +28,5 @@ AC_CHECK_HEADERS([jni.h], [], AC_MSG_ERROR([Native java headers not found. Is \$
 CPPFLAGS=$cppflags_bak
 AC_SUBST([JNI_CPPFLAGS])
 AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdlib.h strings.h unistd.h net/if.h libmnl/libmnl.h $OS_NAME/if_link.h $OS_NAME/rtnetlink.h])
+PKG_CHECK_MODULES(MNL,libmnl)
 AC_OUTPUT
