--- a/bgpsec/pom.xml
+++ b/bgpsec/pom.xml
@@ -52,6 +52,10 @@
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>2.19.1</version>
+    <configuration>
+		<forkMode>once</forkMode>
+		<argLine>-Djava.library.path=/usr/local/lib</argLine>
+	</configuration>
     <dependencies>
         <dependency>
             <groupId>org.junit.platform</groupId>
