Base functions and configuration
Separated the base_functions from the actual code to receive the java
messages in the native code. Added classes to read the configuration.
Perfected the capture of the UPDATE message.

--- a/bgpsec/pom.xml
+++ b/bgpsec/pom.xml
@@ -82,7 +82,7 @@
                             <goal>javah</goal>
                         </goals>
                         <configuration>
-                            <javahClass>ar.strellis.com.bgpsec.routingconfig.RoutingConfigurer</javahClass>
+                            <javahClass>ar.strellis.com.bgpsec.routingconfig.RoutingConfigurerNml</javahClass>
                             <javahOutputFilePath>${project.basedir}/src/main/native/include/routing_configurer.h</javahOutputFilePath>
                         </configuration>
                     </execution>
