--- a/bgpsec/pom.xml
+++ b/bgpsec/pom.xml
@@ -105,6 +105,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<packageName>ar.strellis.com.bgpsec.configparser</packageName>
 					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
 					<visitor>true</visitor>
 				</configuration>
@@ -296,6 +297,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.9</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.jnr/jnr-unixsocket -->
+		<dependency>
+			<groupId>com.github.jnr</groupId>
+			<artifactId>jnr-unixsocket</artifactId>
+			<version>0.23</version>
 		</dependency>
 	</dependencies>
 	<repositories>
