--- a/bgpsec/pom.xml
+++ b/bgpsec/pom.xml
@@ -304,6 +304,12 @@
 			<artifactId>jnr-unixsocket</artifactId>
 			<version>0.23</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
